kubernetes/overlays/dev/middlewares.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix

  spec:
  stripPrefix:
    prefixes:
      - /library
