kubernetes/overlays/dev/virtual-service.yaml
---
# See more at https://istio.io/docs/reference/config/networking/virtual-service/
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService

metadata:
    name: web

spec:
    hosts:
        - dev.sweetrpg.com
    gateways:
        - sweetrpg-main/gateway
    http:
#   tls:
#     - match:
#         - uri:
#             prefix: /api/0/library
#         - port: 443
#           sniHosts:
#             - dev.sweetrpg.com
#       route:
#         - destination:
#             host: api-v1.sweetrpg-library.svc.cluster.local
#             port:
#               number: 8281
